<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/png_background"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_time_rn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Time_rn"
                android:textSize="60sp"
                android:textColor="@color/main_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_date_rn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_rn"
                android:textSize="22sp"
                android:textColor="@color/main_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_time_rn"/>
            
        </androidx.constraintlayout.widget.ConstraintLayout>
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_today">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/add_alarm"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"
                android:elevation="20dp"
                android:background="@drawable/bg_rounded_grey">

                <TextView
                    android:id="@+id/tv_add_alarm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:text="@string/newAlarm"
                    android:textColor="@color/main_color"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="5dp" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/add_sleep_schedule"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toEndOf="@id/add_alarm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"
                android:elevation="20dp"
                android:background="@drawable/bg_rounded_blue">

                <TextView
                    android:id="@+id/tv_timer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/timer"
                    android:textColor="@color/secondary_color"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bed_wake"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttons">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/tv_wake_bed_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sleep_wake_up"
                    android:textSize="22sp"
                    android:textColor="#929FAB"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bed_time"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_wake_bed_title"
                android:paddingStart="20dp"
                android:elevation="20dp"
                android:background="@drawable/bed_wake_time"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/tv_bed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bed"
                    android:textSize="22sp"
                    android:textColor="@color/main_color"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                
                <Button
                    android:id="@+id/change_sleep"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/main_color"
                    app:layout_constraintCircleRadius="10dp"
                    android:text="@string/change"
                    android:textColor="@color/secondary_color"
                    android:textAllCaps="false"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:elevation="30dp"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/wake_time"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:layout_margin="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bed_time"
                android:paddingStart="20dp"
                android:elevation="18dp"
                android:background="@drawable/bed_wake_time"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/tv_wake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wake"
                    android:textSize="22sp"
                    android:textColor="@color/main_color"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <Button
                    android:id="@+id/change_wake"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/main_color"
                    android:text="@string/change"
                    android:textColor="@color/secondary_color"
                    android:textAllCaps="false"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:elevation="30dp"/>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/other_alarms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttons"
            android:layout_marginTop="267dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <TextView
                android:id="@+id/tv_other_alarms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_alarms"
                android:textSize="23sp"
                android:textColor="#202122"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_other_alarms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/tv_other_alarms"
                app:layout_constraintStart_toStartOf="parent"
                tools:listitem="@layout/item_row_other_alarms"
                android:elevation="20dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
